crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__boolean_equals_list_nullable@outer_null_is_true.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NullableBoolean(
        NullableBooleanFilter(IsTrue),
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Boolean,
            },
        ),
        nullable: true,
    },
    unfiltered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      null,
      BooleanArray
    [
      true,
      true,
    ],
      BooleanArray
    [
      false,
      false,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
    filtered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      BooleanArray
    [
      true,
      true,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
}
